# AI_Assistant

./: .gitignore  README.md
AI_Assistant/: README.md
AI_Assistant/apps/desktop/: package.json  tsconfig.json  vite.config.ts
AI_Assistant/docs/: EXECUTION_MANUAL.md
AI_Assistant/scripts/: dev_desktop.sh
AI_Assistant/services/backend/: config.yaml  pyproject.toml
AI_Assistant/services/backend/app/: main.py
AI_Assistant/services/backend/app/api/: __init__.py  router.py
AI_Assistant/services/backend/app/contracts/: __init__.py
AI_Assistant/services/backend/app/core/: logging.py  responses.py  security.py
AI_Assistant/services/backend/app/modules/actions/: __init__.py
AI_Assistant/services/backend/app/modules/llm/: __init__.py
AI_Assistant/services/backend/app/modules/router/: __init__.py
AI_Assistant/services/backend/app/storage/: __init__.py
AI_Assistant/services/backend/tests/unit/: test_app_factory.py  test_step0_layout.py
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: App.test.tsx  App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
docs/: API_CONTRACT.md  ARCHITECTURE.md  CODEX_STEPS.md  LESSONS_LEARNED.md
scripts/: check_structure.ps1  dev_backend.sh  export_openapi.py  generate_ts_types.sh  run_local_qwen_smoke.py
services/backend/: config.yaml  pyproject.toml
services/backend/ai_desktop_assistant_backend.egg-info/: PKG-INFO  SOURCES.txt  (+1 more)
shared/openapi/: openapi.json
(+34 files in other folders)
