[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-desktop-assistant-backend"
version = "0.1.0"
description = "Backend service shell for the AI Desktop Assistant"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "httpx>=0.27.0",
  "structlog>=24.1.0",
  "pyyaml>=6.0.1",
  "aiosqlite>=0.20.0",
  "pyperclip>=1.8.2",
  "Pillow>=10.2.0",
  "chardet>=5.2.0",
  "mss>=9.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "respx>=0.21.0",
  "ruff>=0.4.0",
  "mypy>=1.9.0",
  "pre-commit>=3.7.0"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
packages = ["app"]
strict = true

