[package]
name = "ai-desktop-assistant"
version = "0.1.0"
description = "Desktop shell for the AI Desktop Assistant"
authors = ["Codex"]
edition = "2021"

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = [] }

